fix spacing

--- a/packages/wp-plugin/essentials/src/dashboard/blocks/next-best-actions/style.css
+++ b/packages/wp-plugin/essentials/src/dashboard/blocks/next-best-actions/style.css
@@ -36,6 +36,10 @@
   height: 100%;
 }
 
+#ionos-dashboard__essentials_nba > .wp-block-columns > .wp-block-column > .action-content > p {
+  margin-top: -10px;
+}
+
 #ionos-dashboard__essentials_nba > .wp-block-columns > .wp-block-column > p {
   flex-grow: 1;
 }
